fix: solved post title alignment and cover defaults #3158

--- a/assets/scss/components/elements/blog/_single.scss
+++ b/assets/scss/components/elements/blog/_single.scss
@@ -123,6 +123,8 @@
 
 	.container {
 		display: flex;
+		justify-content: var(--justify, center);
+		text-align: var(--textAlign, center);
 	}
 }
 
